kubernetes/test/autotrends-test-redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: autotrends-test-redis-service
  labels:
    username: svv346
    env: test
spec:
  type: ClusterIP
  selector:
    app: autotrends-test-redis-app
  ports:
  - name: autotrends-test-redis-app
    port: 6379
    targetPort: 6379
