kubernetes/test/autotrends-test-wrk-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autotrends-test-wrk-deployment
  labels:
    app: autotrends-test-worker
    username: svv346
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: autotrends-test-worker
  template:
    metadata:
      labels:
        app: autotrends-test-worker
    spec:
      containers:
        - name: autotrends-test-worker
          imagePullPolicy: Always
          image: sreshaven/worker_api:final
          env:
          - name: REDIS_IP
            value: 10.233.15.94
