kubernetes/test/flasktest_nodeport_service.yml
---
kind: Service
apiVersion: v1
metadata:
    name: flasktest-service-nodeport
spec:
    type: NodePort
    selector:
        app: svv346-test-flask-app
    ports:
        - port: 5000
          targetPort: 5000
