kubernetes/test/svv346-test-flask-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svv346-test-flask-service
  labels:
    username: svv346
    env: test
spec:
  type: ClusterIP
  selector:
    app: svv346-test-flask-app
  ports:
  - name: svv346-test-flask-app
    port: 5000
    targetPort: 5000
